# silo

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  silo
include/: database.h  silo.h  storage.h  vault.h
src/: database.cpp  main.cpp  silo.cpp  storage.cpp  vault.cpp
